<resources>
    <string name="app_name">WeekCartApp</string>
    <string name="track_analyze">Track. Analyze. Save.</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_to">Welcome to\nWeekCartApp</string>
    <string name="track_your">Track your grocery bills, get health insights,\nand manage your shopping smartly</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account? </string>
    <string name="sign_up_here">Sign up here</string>
    <string name="create_account">Create Account</string>
    <string name="join_weekcart">Join WeekCartApp to track your groceries</string>
    <string name="full_name">Full Name *</string>
    <string name="enter_full_name">Enter your full name</string>
    <string name="phone_number">Phone Number *</string>
    <string name="enter_phone">Enter your phone number</string>
    <string name="email_star">Email *</string>
    <string name="password_star">Password *</string>
    <string name="at_least_6">At least 6 characters</string>
    <string name="confirm_password">Confirm Password *</string>
    <string name="reenter_password">Re-enter your password</string>
    <string name="adult_count">Adult Count *</string>
    <string name="child_count">Child Count *</string>
    <string name="total_members">Total family members: 2</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="already_account">Already have an account? </string>
    <string name="login_here">Login here</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="enter_email_otp">Enter your email to receive an OTP</string>
    <string name="email_address">Email Address</string>
    <string name="enter_registered">Enter your registered email</string>
    <string name="send_otp">Send OTP</string>
    <string name="back_to_login">←   Back to Login</string>
    <string name="remember_password">Remember your password? </string>
    <string name="reset_password_title">Reset Password</string>
    <string name="enter_otp_new">Enter the OTP sent to your email and your new password</string>
    <string name="otp_code">OTP Code</string>
    <string name="enter_otp_hint">Enter 6-digit OTP</string>
    <string name="new_password">New Password</string>
    <string name="reset_password_btn">Reset Password</string>
</resources>